--- a/static/scss/_partials/_portrait-mobile.scss
+++ b/static/scss/_partials/_portrait-mobile.scss
@@ -23,7 +23,7 @@
             right: 0;
         }
 
-        height: 12vw;
+        height: 13vw;
 
     }
 
@@ -36,6 +36,14 @@
 
     .desktop-navbar {
         display: none;
+    }
+
+    .mobile-list-items {
+
+        margin: {
+            top: 15px;
+            bottom: 15px;
+        }
     }
 
     .navbar-nav {
@@ -55,6 +63,10 @@
 
     #menubutton {
         margin-top: 15px;
+    }
+
+    .alert {
+        margin-bottom: 0;
     }
 
     .icon-bar {
@@ -80,13 +92,19 @@
 
     // product card
 
-    .productWrapper {
+    .product-image {
+        width: 50vw;
+        height: 37.5vw;
+
+    }
+
+    .product-wrapper {
         padding-bottom: 20vw;
         background-color: #9e988fcb;
 
     }
 
-    .searchFieldWrapper {
+    .search-field-wrapper {
         width: 100%;
         padding-bottom: 10vw;
     }
@@ -129,20 +147,19 @@
     }
 
     .product-quickstats {
-        width: 50%;
         display: flex;
         flex-wrap: wrap;
         position: absolute;
         top: 15vw;
-        left: 50vw;
+        left: 56vw;
     }
 
     .quickstats-key {
-        width: 30%;
+        width: 40%;
     }
 
     .quickstats-value {
-        width: 68%;
+        width: 60%;
     }
 
     .product-stats {
@@ -160,8 +177,9 @@
         left: 88.7%;
     }
 
-    .addWishBtn,
-    .removeWishBtn, .addReviewBtn {
+    .add-wish-btn,
+    .remove-wish-btn,
+    .add-review-btn {
         border: none;
         background-color: transparent;
     }
@@ -213,6 +231,7 @@
 
     #edit-review-btn {
         background-color: rgb(141, 144, 173);
+
         margin: {
             left: 2px;
             right: 2px;
@@ -236,18 +255,17 @@
         position: absolute;
         left: 88.7%;
         top: 7%;
-
     }
 
 
-    .addReviewBtn {
+    .add-review-btn {
         font-size: 5.5vw;
 
     }
 
     // wishlist
 
-    .wishlistWrapper {
+    .wishlist-wrapper {
         padding-bottom: 25vw;
         background-color: #9e988fcb;
         min-height: 82vh;
@@ -264,16 +282,16 @@
         font-size: 5.5vw;
     }
 
-    .stariconNotAdded,
-    .stariconAdded {
+    .staricon-not-added ,
+    .staricon-added {
         font-size: 5.5vw;
     }
 
-    .stariconNotAdded {
+    .staricon-not-added {
         color: rgb(151, 22, 22);
     }
 
-    .stariconAdded {
+    .staricon-added {
         color: green;
     }
 
@@ -297,28 +315,28 @@
     #bottombar {
         display: flex;
         flex-wrap: wrap;
-        margin: 7.5px 0;
     }
 
     #bottombar .quicklinks {
-        width: 22vw;
+        width: 20vw;
         display: flex;
         justify-content: center;
-        align-items: center;
-        font-size: 4.5vw;
+        font-size: 7.5vw;
+        height: 20px;
+    }
+
+    .nav>li>a {
+        padding: 0;
+
     }
 
     .active-app {
         color: rgba(255, 0, 0, 0.5);
     }
 
-    .products-icon {
-        margin-bottom: 5px;
-    }
-
     // profile page
 
-    .profileWrapper {
+    .profile-wrapper {
         padding-bottom: 20vw;
     }
 
@@ -328,9 +346,9 @@
 
     .form-control,
     .profile-tabs,
-    .orderline_header,
-    .orderline_value,
-    .updateAddressBtn {
+    .orderline-header,
+    .orderline-value,
+    .update-address-btn {
         font-family: $dosisFont;
         font-size: 3.5vw;
         font-weight: 900;
@@ -349,15 +367,15 @@
         width: 95vw;
     }
 
-    .order_container {
+    .order-container {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
     }
 
-    .orderline_header,
-    .orderline_value {
+    .orderline-header,
+    .orderline-value {
         width: 33%;
         display: flex;
         justify-content: center;
@@ -374,7 +392,7 @@
         font-size: 4vw;
     }
 
-    .updateAddressBtn {
+    .update-address-btn {
         background-color: lightblue;
     }
 
@@ -425,7 +443,7 @@
 
     // delete popup
 
-    #confirmDeletePopup {
+    #confirm-delete-popup {
         background-color: beige;
         border-radius: 5px;
         border: 1px solid grey;
@@ -440,7 +458,7 @@
         transition: opacity .5s ease-in-out;
     }
 
-    #deletePopupMessage {
+    #delete-popup-message {
         width: 80%;
 
         font: {
@@ -449,13 +467,13 @@
         }
     }
 
-    #deleteConfirmBtn {
+    #delete-confirm-btn {
         background-color: lightcoral;
         color: black;
         margin-right: 2px;
     }
 
-    #deleteCancelBtn {
+    #delete-cancel-btn {
         background-color: lightslategray;
         margin-left: 2px;
         font-family: $dosisFont;
