--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -5,7 +5,7 @@
 {% block content %}
 
 
-<div class="wishlistWrapper ha">
+<div class="wishlist-wrapper ha">
     <div class="row row-flex">
         {% if wishlist_items %}
         {% for item in wishlist_items %}
