--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -5,10 +5,10 @@
 {% endblock head_js %}
 {% block content %}
 
-<div class="productWrapper ha">
+<div class="product-wrapper ha">
 
     <div class="row row-flex">
-        <div class="searchFieldWrapper ha">
+        <div class="search-field-wrapper ha">
             <div class="display">
                 <form action="{% url 'product_search' %}" method="GET">
                     <input type="text" name="q">
@@ -29,7 +29,7 @@
                     {% csrf_token %}
                     <span class="input-group-btn">
                         <input type="text" name="jumper" value="" hidden>
-                        <button class="removeWishBtn" type="submit"><i class="fa fa-star stariconAdded"></i></button>
+                        <button class="remove-wish-btn" type="submit"><i class="fa fa-star staricon-added"></i></button>
                     </span>
                 </form>
                 {% else %}
@@ -37,14 +37,13 @@
                     action="{% url 'add_to_wishlist' product.id %}">
                     {% csrf_token %}
                     <span class="input-group-btn">
-                        <button class="addWishBtn" type="submit"><i class="fa fa-star stariconNotAdded"></i></button>
+                        <button class="add-wish-btn" type="submit"><i class="fa fa-star staricon-not-added "></i></button>
                     </span>
                 </form>
                 {% endif %}
 
 
-                <img src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}"
-                    style="width:200px;height:150px;">
+                <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
 
                 <div class="product-quickstats">
                     <div class="quickstats-key vh"><i class="fa fa-eye"></i></div>
