added scss folder structure

--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -42,8 +42,7 @@
                 {% endif %}
 
 
-                <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}"
-                    style="width:200px;height:150px;">
+                <img class="product-image" src="{{ MEDIA_URL }}{{product.image}}" alt="image of {{product.name}}">
 
                 <div class="product-headline"><b>{{product.name}}</b></div>
 
