--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -6,11 +6,19 @@
 {% block page_heading %}User Login{% endblock %}
 
 {% block content %}
-<form method="POST" action="">
-    {% csrf_token %}
-    {{ login_form | as_bootstrap }}
-    <button type="submit" class="btn btn-default">Login</button>
-</form>
-<p>
-    <a href="{% url 'password_reset' %}">Reset Password</a></p>
+
+<div class="login-wrapper ha">
+
+<div class="page-headline">
+    Login
+</div>
+    <form id="loginform" method="POST" action="">
+        {% csrf_token %}
+        {{ login_form | as_bootstrap }}
+        <button type="submit" class="btn btn-default"><b>Login</b></button>
+    </form>
+    <p>
+        <a href="{% url 'password_reset' %}"><b>Reset Password</b></a></p>
+</div>
+
 {% endblock %}
