--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -24,7 +24,7 @@
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
             <div class="panel-body">
                 {% if product.id in wishlist %}
-                <form class="wishform" id="addwishlist{{product.id}}" method="POST"
+                <form class="wishform" method="POST"
                     action="{% url 'remove_from_wishlist' product.id %}">
                     {% csrf_token %}
                     <span class="input-group-btn">
@@ -33,7 +33,7 @@
                     </span>
                 </form>
                 {% else %}
-                <form class="wishform" id="addwishlist{{product.id}}" method="POST"
+                <form class="wishform" method="POST"
                     action="{% url 'add_to_wishlist' product.id %}">
                     {% csrf_token %}
                     <span class="input-group-btn">
