--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -2,14 +2,22 @@
 {% block title %}Reset Password{% endblock %}
 
 {% block content %}
+<div class="password-reset-wrapper ha">
+    <form method="post" class="accountform ha">
+        <p>Please specify your email address <br> to receive instructions for resetting it.</p>
+        <br>
+        <div style="display:none">
+            <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
+        </div>
+        {{ form.email.errors }}
+        <div class="emailfield-resetform-wrapper ha">
 
-<form method="post" class="accountform">
-    <p>Please specify your email address to receive instructions for resetting it.</p>
-    <br>
-    <div style="display:none">
-        <input type="hidden" value="{{ csrf_token }}" name="csrfmiddlewaretoken">
-    </div>
-     {{ form.email.errors }}
-    <p><label for="id_email" class="control-label required-field">E-mail address:</label> {{ form.email }} <input type="submit" value="Reset password" /></p>
-</form>
+            <label id="password-reset-label" for="id_email" class="control-label required-field">E-mail address:</label>
+            <div class="passwordresetform">
+                {{ form.email }}
+                <input type="submit" value="Reset password" />
+            </div>
+        </div>
+    </form>
+</div>
 {% endblock %}
