--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <div class="cart-wrapper ha">
-    <div class="page-headline">
+    <div class="page-headline ha">
         Your cart
     </div>
     <div class="row row-flex">
@@ -47,7 +47,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit"
-                            aria-hidden="true"></span>Amend</button>
+                            aria-hidden="true"></span> Amend</button>
                 </form>
 
             </div>
